# Adaire-Assessment

./: .gitignore  README.md
backend/: .gitignore  main.py  pyproject.toml  requirements.txt
backend/database/: db.py  models.py
backend/routers/: auth.py  genre.py
backend/security/: helpers.py  schema.py
frontend/: package-lock.json
frontend/app/: globals.css  page.tsx
frontend/app/components/: GenreSummaryTable.tsx  UnsoldGenresTable.tsx
frontend/lib/: api.ts
