[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "crypto>=1.4.1",
    "fastapi>=0.116.1",
    "jose>=1.0.0",
    "jwt>=1.4.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.42",
    "uvicorn[standard]>=0.35.0",
]
